[package]
name = "sol-tx-dispacher"
version = "0.1.0"
edition = "2024"

[features]
default = [
    "astralane",
    "astralane_quic",
    "everstake",
    "everstake_quic",
    "flash_block",
    "nodeone",
    "blockrazor",
    "temporal",
    "helius",
    "zeroslot",
    "nextblock",
    "stellium",
    "jito",
    "harmonic",
]
full = [
    "astralane",
    "astralane_quic",
    "everstake",
    "everstake_quic",
    "flash_block",
    "nodeone",
    "blockrazor",
    "temporal",
    "helius",
    "zeroslot",
    "nextblock",
    "stellium",
    "jito",
    "harmonic",
]
astralane       = []
astralane_quic  = []
everstake       = []
everstake_quic  = []
flash_block     = []
nodeone         = []
blockrazor      = []
temporal        = []
helius          = []
zeroslot        = []
nextblock       = []
stellium        = []
jito            = []
harmonic        = []

[dependencies]
sol-slot-leader = { git = "https://github.com/miaomiaowu0428/sol-slot-leader.git" }
sol-tx-send     = { git = "https://github.com/miaomiaowu0428/sol-tx-sender.git" }
nonce_cache     = { git = "https://github.com/miaomiaowu0428/nonce_cache.git" }
grpc-client     = { git = "https://github.com/miaomiaowu0428/grpc-client.git" }
tokio           = { version = "1", features = ["full"] }
log             = "0.4"
anyhow          = "1"
ahash           = "0.8"
solana-sdk      = "3.0.0"
solana-client   = "3.1.11"
